# kungfu

./: .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .npmignore  .npmrc  .prebuild.js  .prettierrc  .prettierrc.js  .yarnrc  CHANGELOG.md  CMakeLists.txt  Pipfile  Public.con  QueryRsp.con  README.md  TradingDay.con  build-cli.sh  build.sh  lerna.json  package-lock.json  package.json  sudo  tsconfig.json
core/: .clang-format  CMakeLists.txt  Pipfile  binding.gyp  conanfile.py  conanfile.txt  package.json  sudo
core/.build/: config.js  pipenv.js  yarn-run.py
core/.build-tools/: aws-s3-sync.js  aws-test.js  kf-config.js  kf-info.js  kf-make.js  node-gyp.py  node-pre-gyp.js  pipenv.js
core/cmake/: clion.cmake  compiler.cmake
core/cpp/: CMakeLists.txt
core/cpp/lib/: CMakeLists.txt
core/cpp/node/: CMakeLists.txt
core/cpp/pybind/: CMakeLists.txt
core/cpp/wingchun/: CMakeLists.txt
core/cpp/yijinjing/: CMakeLists.txt
core/extensions/: CMakeLists.txt
core/extensions/bar/: CMakeLists.txt  __init__.py  package.json
core/extensions/bar_handle/: CMakeLists.txt  __init__.py
core/extensions/btdata/: CMakeLists.txt
core/extensions/ctp/: CMakeLists.txt  package.json
core/extensions/passive/: CMakeLists.txt  __init__.py
core/extensions/sim/: CMakeLists.txt  README.md  __init__.py  marketdata_sim.py  package.json  trader_sim.py
core/extensions/tora/: CMakeLists.txt  __init__.py
core/extensions/xtp/: CMakeLists.txt  __init__.py  package.json
core/node/: index.js  kungfu.js  nanomsg.js  node-pre-gyp.js  sqlite3.js  yjj.js
core/node/windows-kill/: index.js  options.js  signals.js  windows-kill-class.js
core/python/: build.py  cmakesetup.py  dev_run.py  dev_test.py  devrun.py  env.py  gyp-yarn.py  kfc-conf.spec  kfc-unix.spec  kfc-win.spec  kfc.spec  kungfu.unix.spec  kungfu.win.spec  pyinstaller.py  setup.py
core/python/extensions/: __init__.py
core/python/hooks/: hook-kungfu.py  pyarrow_hook.py
core/python/kungfu/: __init__.py  __main__.py  _version.py  env.py  version.py
core/python/kungfu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/python/kungfu_extensions/: __init__.py
core/python/test/: __init__.py  __main__.py  test_ledger.py  test_tax.py
cpp/: CMakeLists.txt
cpp/wingchun/: CMakeLists.txt
cpp/wingchun/calendar/: CMakeLists.txt
cpp/wingchun/commission/: CMakeLists.txt  commission_manager.cpp  commission_manager.h  commission_storage.cpp  commission_storage.h  log.cpp
cpp/wingchun/event_loop/: CMakeLists.txt  event_loop.cpp  event_loop.h
cpp/wingchun/gateway/: CMakeLists.txt
cpp/wingchun/include/: config.h  constant.h  feed_handler.h  md_struct.h  msg.h  oms_struct.h  reqrsp.h  serialize.h
cpp/wingchun/nn_publisher/: CMakeLists.txt  nn_publisher.cpp  nn_publisher.h
cpp/wingchun/oms/: CMakeLists.txt
cpp/wingchun/portfolio/: CMakeLists.txt
cpp/wingchun/pybind/: CMakeLists.txt  PyWingchun.cpp  pybind_wingchun.cpp
cpp/wingchun/resources/: holidays.db
cpp/wingchun/src/: CMakeLists.txt
cpp/wingchun/storage/: CMakeLists.txt  account_list_storage.cpp  account_list_storage.h  log.cpp  log.h  order_storage.cpp  order_storage.h  snapshot_storage.cpp  snapshot_storage.h  source_list_storage.cpp  source_list_storage.h  strategy_list_storage.cpp  strategy_list_storage.h  strategy_list_storage.hpp  trade_storage.cpp  trade_storage.h
cpp/wingchun/strategy/: CMakeLists.txt
cpp/wingchun/task_scheduler/: CMakeLists.txt  task_scheduler.cpp  task_scheduler.h
cpp/wingchun/uid_generator/: CMakeLists.txt  uid_generator.cpp
cpp/wingchun/util/: CMakeLists.txt
cpp/yijinjing/: CMakeLists.txt
cpp/yijinjing/journal/: CMakeLists.txt  FeeHandler.hpp  Frame.hpp  FrameHeader.h  Hash.hpp  IStrategyUtil.h  Journal.cpp  Journal.h  JournalFinder.cpp  JournalFinder.h  JournalHandler.cpp  JournalHandler.h  JournalReader.cpp  JournalReader.h  JournalWriter.cpp  JournalWriter.h  Log.h  Page.h  PageCommStruct.h  PageHeader.h  PageProvider.cpp  PageProvider.h  PageService.cpp  PageService.h  PageServiceMessage.h  PageSocketStruct.h  PageUtil.cpp  PageUtil.h  (+14 more)
examples/extension/: CMakeLists.txt  __init__.py  package.json
examples/operator-python-101/: pyproject.toml
examples/strategy-python-101/: package.json  pyproject.toml
extensions/: CMakeLists.txt
extensions/basketTrade/: package.json  tsconfig.json
extensions/ctp/: CMakeLists.txt  __init__.py
extensions/sim/: .gitignore  __init__.py  package.json  pyproject.toml
extensions/timer-task/: package.json  pyproject.toml
extensions/timerTask/: package.json  pyproject.toml
extensions/twap/: .gitignore  package.json
extensions/xtp/: .gitignore  .npmignore  CMakeLists.txt  __init__.py  package.json  pyproject.toml
framework/core/: .npmignore  .prettierrc.js  CMakeLists.txt  Pipfile  binding.gyp  conanfile.py  log.txt  package.json  poetry.toml  pyproject.toml
wingchun/: CMakeLists.txt
wingchun/base/: EngineUtil.hpp  IEngine.cpp  IEngine.h  TDUserStruct.cpp  TDUserStruct.h  WC_DECLARE.h
wingchun/md/: CMakeLists.txt  IMDEngine.cpp  IMDEngine.h  MDEngineCTP.cpp  MDEngineCTP.h  MDEngineXTP.cpp  MDEngineXTP.h
wingchun/strategy/: CMakeLists.txt  IWCDataProcessor.h  IWCStrategy.cpp  IWCStrategy.h  PyWCStrategy.cpp  PyWCStrategy.h  WCDataWrapper.cpp  WCDataWrapper.h  WCStrategyUtil.cpp  WCStrategyUtil.h
wingchun/td/: CMakeLists.txt  ITDEngine.cpp  ITDEngine.h  TDEngineCTP.cpp  TDEngineCTP.h  TDEngineXTP.cpp  TDEngineXTP.h
wingchun/tool/: CMakeLists.txt  DataConsumer.cpp  DataConsumer.h  StrategyDataConsumer.cpp  StrategyDataConsumer.h  td_pos_tool.cpp  wc_strategy_data_printer.cpp
yijinjing/journal/: CMakeLists.txt  Frame.hpp  FrameHeader.h  IJournalVisitor.h  IPageProvider.h  IStrategyUtil.h  Journal.cpp  Journal.h  JournalFinder.cpp  JournalFinder.h  JournalHandler.cpp  JournalHandler.h  JournalReader.cpp  JournalReader.h  JournalWriter.cpp  JournalWriter.h  Page.cpp  Page.h  PageHeader.h  PageProvider.cpp  PageProvider.h  PageUtil.cpp  PageUtil.h  PythonExtend.cpp  StrategySocketHandler.h  StrategyUtil.cpp  StrategyUtil.h
(+3093 files in other folders)
