[project]
name = "examples-operator-python"
license = {text = "Apache-2.0"}
authors = [
    {name = "kungfu-trader", email = ""},
]
dynamic = ["version"]
requires-python = "~=3.9"
dependencies = []

[tool.pdm]
version = {use_scm = true}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
