[project]
name = "kfx_vendor_sim"
version = { use_scm = true }
license = { text = "Apache-2.0" }
authors = [
    { name = "Kungfu Trader", email = "info@kungfu.link" },
]
dependencies = [
    "dotted_dict >= 1.1.0",
    "recordclass >= 0.14.0",
    "sortedcontainers >= 2.4.0",
]
dynamic = ["classifiers", "version"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://www.kungfu-trader.com"
repository = "https://github.com/kungfu-trader/kungfu.git"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
