[project]
name = "kfx-timer-task"
license = {text = "Apache-2.0"}
authors = [
    {name = "kungfu-trader", email = "info@kungfu.link"},
]
dynamic = ["version"]
requires-python = "~=3.9"
dependencies = [
    "dotted-dict~=1.1.0",
    "recordclass~=0.17.0",
    "sortedcontainers~=2.4.0",
]
[tool]
[tool.pdm]
version = {use_scm = true}
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
