PROJECT(kfext_xtp)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
endif()

IF(NOT XTP_API_VERSION)
    SET(XTP_API_VERSION XTP_API_20180516_1.1.18.13)
ENDIF()

INCLUDE_DIRECTORIES(api/${XTP_API_VERSION}/include)

IF(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
    LINK_DIRECTORIES(api/${XTP_API_VERSION}/lib/win64/dll)
ENDIF()
IF(UNIX AND NOT APPLE)
    LINK_DIRECTORIES(api/${XTP_API_VERSION}/lib/linux)
ENDIF()
IF(APPLE)
    LINK_DIRECTORIES(api/${XTP_API_VERSION}/lib/macosx)
ENDIF()

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/xtp)

CONFIGURE_FILE(__init__.py "${KF_EXTENSION_BUILD_DIR}/__init__.py")

PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KF_EXTENSION_BUILD_DIR})

IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE xtptraderapi xtpquoteapi wingchun yijinjing)
    FILE(COPY api/${XTP_API_VERSION}/lib/win64/dll/xtpquoteapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${XTP_API_VERSION}/lib/win64/dll/xtptraderapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${XTP_API_VERSION}/lib/win64/dll/xtpquoteapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${XTP_API_VERSION}/lib/win64/dll/xtptraderapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
IF(UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE xtptraderapi xtpquoteapi wingchun yijinjing)
    FILE(COPY api/${XTP_API_VERSION}/lib/linux/libxtpquoteapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${XTP_API_VERSION}/lib/linux/libxtptraderapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
IF(APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE xtptraderapi xtpquoteapi wingchun yijinjing)
    FILE(COPY api/${XTP_API_VERSION}/lib/macosx/libxtpquoteapi.dylib DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${XTP_API_VERSION}/lib/macosx/libxtptraderapi.dylib DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
